DigicielFull/force-app/main/default/objects/Monthly_ICT_GSM_Targets__c/Monthly_ICT_GSM_Targets__c.object-meta.xml
<CustomObject>
    <label>Monthly ICT &amp; GSM Targets</label>
    <nameField>
        <displayFormat>Digicel-{0000000}</displayFormat>
        <label>Monthly ICT &amp; GSM Targets Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly ICT &amp; GSM Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>