DigicielFull/force-app/main/default/objects/Monthly_ICT_GSM_Targets__c/fields/Fibre_Target__c.field-meta.xml
<CustomField>
    <fullName>Fibre_Target__c</fullName>
    <label>Fibre Target</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>