DigicielFull/force-app/main/default/objects/Monthly_ICT_GSM_Targets__c/fields/Hosted_PBX_EXT__c.field-meta.xml
<CustomField>
    <fullName>Hosted_PBX_EXT__c</fullName>
    <label>Hosted PBX EXT</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>