DigicielFull/force-app/main/default/objects/Monthly_ICT_GSM_Targets__c/fields/ICT_User_Target_Records__c.field-meta.xml
<CustomField>
    <fullName>ICT_User_Target_Records__c</fullName>
    <label>ICT User Target Records</label>
    <referenceTo>ICT_User_Target_Records__c</referenceTo>
    <relationshipLabel>Monthly ICT &amp; GSM Targets</relationshipLabel>
    <relationshipName>Monthly_ICT_GSM_Targets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>