DigicielFull/force-app/main/default/objects/Monthly_ICT_GSM_Targets__c/fields/Is_Current_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Fiscal_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Current Fiscal Year</label>
    <type>Checkbox</type>
</CustomField>