DigicielFull/force-app/main/default/objects/Monthly_ICT_GSM_Targets__c/fields/Metro_Target__c.field-meta.xml
<CustomField>
    <fullName>Metro_Target__c</fullName>
    <label>Metro Target</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>