DigicielFull/force-app/main/default/objects/Monthly_ICT_GSM_Targets__c/fields/Mobile_Ads_Monthly_Revenue_Target__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Ads_Monthly_Revenue_Target__c</fullName>
    <label>Mobile Ads Monthly Revenue Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>