DigicielFull/force-app/main/default/objects/Monthly_ICT_GSM_Targets__c/fields/Monthly_GSM_Activation_s_Actual__c.field-meta.xml
<CustomField>
    <fullName>Monthly_GSM_Activation_s_Actual__c</fullName>
    <label>Monthly GSM Activation&apos;s Actual</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>