DigicielFull/force-app/main/default/objects/Monthly_ICT_GSM_Targets__c/fields/Monthly_GSM_Recurring_Target__c.field-meta.xml
<CustomField>
    <fullName>Monthly_GSM_Recurring_Target__c</fullName>
    <label>Monthly GSM Recurring Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>