DigicielFull/force-app/main/default/objects/Monthly_ICT_GSM_Targets__c/fields/Monthly_One_Off_Target__c.field-meta.xml
<CustomField>
    <fullName>Monthly_One_Off_Target__c</fullName>
    <label>Monthly One-Off Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>