DigicielFull/force-app/main/default/objects/Monthly_ICT_GSM_Targets__c/fields/Monthly_OTC_Actual__c.field-meta.xml
<CustomField>
    <fullName>Monthly_OTC_Actual__c</fullName>
    <label>Monthly OTC Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>