DigicielFull/force-app/main/default/objects/Monthly_ICT_GSM_Targets__c/fields/Monthly_Recurring_Target_new__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Recurring_Target_new__c</fullName>
    <label>Monthly Recurring Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>