DigicielFull/force-app/main/default/objects/Monthly_ICT_GSM_Targets__c/fields/Post_Paid__c.field-meta.xml
<CustomField>
    <fullName>Post_Paid__c</fullName>
    <label>PostPaid Monthly Target</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>