DigicielFull/force-app/main/default/objects/Monthly_ICT_GSM_Targets__c/fields/Target_Month_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Month_Date__c</fullName>
    <label>Target Month Date</label>
    <type>Date</type>
</CustomField>